--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,59 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'montserrat', sans-serif;
 }
 
 .app-container {
     border: 2px solid greenyellow;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
+    background-image: url("/src/assets/background.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.app-window {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(155, 155, 155, 0.164);
 }
 
 .app {
-    border: 2px solid red;
-    width: 30vw;
     height: 100vh;
+    width: 80%;
+    display: flex;
 }
 
 /* CitySearch Component */
 .search-bar {
     border: 2px solid blue;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+
+    appearance: none;
+    background: none;
+
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 0px 0px 16px 16px;
+    box-shadow: 0px 5px rgba(255, 255, 255, 0.2);
 }
 
 .search-bar input {
     height: 3em;
-    width: 75%;
+    display: block;
+    padding: 10px;
+    width: 100%;
+
+    appearance: none;
+    background: none;
+
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 0px 0px 16px 16px;
+    box-shadow: 0px 5px rgba(255, 255, 255, 0.2);
 }
 
 
@@ -41,6 +72,7 @@
     height: 8em;
     margin-top: 3vh;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -58,7 +90,7 @@
 .min-max {
     border: 2px solid brown;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     width: 30%;
     text-align: center;
@@ -91,3 +123,40 @@
     height: 30vh;
 }
 
+/* Detailed Data Component */
+.detaileddata-container {
+    border: 2px solid grey;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 2em;
+    margin-right: 2em;
+}
+
+#wind, #humidity, #rain {
+    border: 2px solid peru;
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Forecast */
+.forecast-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 3em;
+}
+
+.forecast-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.forecast-card img {
+    height: 10vh;
+}
+
+.forecast-card h2 {
+    font-size: 0.7em;
+}
