--- a/src/Redo.css
+++ b/src/Redo.css
@@ -1,53 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 body {
-    font-family: 'montserratt', sans-serif;
+    font-family: 'Comfortaa', cursive;
 }
 
 .app {
-    background-color: white;
-    background-size: cover;
-    background-position: center;
+    background-color: rgba(255, 255, 255, 0);
     transition: 0.4s ease-out;
+    max-height: 100vh;
 }
 
 main {
-    max-height: 90vh;
+    height: 96vh;
+    width: 100vw;
+    background-color: rgb(228, 244, 255);
 }
 
 /* CitySearch Component */
 .search-box {
-    width: 75%;
-    margin-left: 12.5%;
+    /* border: 2px solid red; */
+    width: 84vw;
+    height: 7vh;
+    margin-top: 0vh;
+    padding-top: 2vh;
+    margin-left: 8vw;
 }
 
 .search-box input {
     display: block;
     width: 100%;
-    padding: 15px;
+    height: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
 
     appearance: none;
     background: none;
-    border: none;
+    border: 2px solid rgba(0, 0, 0, 0.589);
+    border-radius: 16px;
     outline: none;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 
-    background-color: rgba(223, 221, 221, 0.897);
-    border-radius: 0px 0px 16px 16px;
+    background-color: rgba(255, 255, 255, 0);
 
-    box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
-
-    color: #202020;
-    font-size: 20px;
+    color: #000000;
+    font-size: 15px;
 
     transition: 0.4s ease;
 }
 
 .search-box input:focus{
-    background-color: rgba(255, 255, 255, 0.75);
+    background-color: rgba(255, 255, 255, 0.507);
+}
+
+.basicdata-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.basicdata-container .locationDate {
+    margin-top: 5vh;
+    margin-left: 20vw;
+    width: 60vw;
+    padding: 2vh;
+
+    border-radius: 16px;
+    background-color: rgba(255, 255, 255, 0.288);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .basicdata-container .location {
@@ -55,44 +81,128 @@ main {
     font-size: 36px;
     font-weight: 700px;
     text-align: center;
-    margin-top: 6vh;
 }
 
 .basicdata-container .date {
     text-align: center;
+    font-weight: 300;
 }
+
+.currentweathericon-container {
+    display: flex;
+    justify-content: center;
+    max-height: 30vh;
+}
+
+.currentweathericon-container img {
+    height: 38vh;
+    overflow: hidden;
+    margin-top: -3vh;
+}
+
 
 .basicdata-container .basicdata-container-two {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 5vh;
-    padding: 0 30px 0 30px;
+    margin-top: 2vh;
+    padding: 0 8vw 0 8vw;
 }
 
 .basicdata-container-two .temps-container {
     border-radius: 16px;
-    padding: 40px;
-    background-color: rgba(223, 221, 221, 0.589);
-    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+    height: 12vh;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
 }
 
 .current-temp {
-    font-size: 40px;
-
+    display: flex;
+    align-items: flex-end;
+    font-size: 70px;
+    font-weight: 700;
 }
 
 .basicdata-container-two .temps-container .min-max {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    margin-top: 10px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
-.basicdata-container .weather-icon {
-    height: 25vh;
+.max, .min {
+    display: flex;
+    justify-content: start;
+    font-weight: 300;
+    color: rgba(70, 70, 70, 0.815);
+}
+
+.max p, .min p {
+    margin-left: .3em;
+}
+
+.divider {
+    height: 0.5vh;
+    width: 84vw;
+    margin-top: .5vh;
+    margin-left: 8vw;
+    border: 1px solid black;
+    border-radius: 20px;
+    background-color: black;
+}
+
+.detaileddata-container {
+    /* border: 2px solid pink; */
+}
+
+.detaileddata-container #weatherDescription {
+    height: 4vh;
+    margin-left: 8vw;
+    padding-top: 0.1em;
+    padding-bottom: 0.1em;
+    color: black;
+    font-size: 26px;
+}
+
+.detaileddata-container2 {
+    /* border: 2px solid green; */
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5vh;
+    margin-left: 8vw;
+    margin-right: 8vw;
+}
+
+.detaileddata-container2 #wind, #humidity {
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    min-width: 40vw;
+    min-height: 10vh;
+    border-radius: 16px;
+    background-color: rgba(255, 255, 255, 0.288);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+    text-align: center;
+    line-height: 1.4em;
+}
+
+
+/* footer */
+footer {
+    border-top: 2px solid black;
+    border-radius: 16px 16px 0px 0px;
+    /* background-color: rgba(192, 192, 192, 0.432); */
+    height: 3vh;
+    display: flex;
+    justify-content: center;
 }
 
 footer img {
-    height: 3rem;
+    height: 1.5rem
 }
