--- a/src/Redo.css
+++ b/src/Redo.css
@@ -18,9 +18,9 @@ body {
 }
 
 main {
-    height: 96vh;
+    height: 100vh;
     width: 100vw;
-    background-color: rgb(228, 244, 255);
+    background-color: rgb(105, 156, 245);
 }
 
 /* CitySearch Component */
@@ -57,7 +57,7 @@ main {
 }
 
 .search-box input:focus{
-    background-color: rgba(255, 255, 255, 0.507);
+    background-color: rgba(255, 255, 255, 0.705);
 }
 
 .basicdata-container {
@@ -67,8 +67,8 @@ main {
 
 .basicdata-container .locationDate {
     margin-top: 5vh;
-    margin-left: 20vw;
-    width: 60vw;
+    margin-left: 10vw;
+    width: 80vw;
     padding: 2vh;
 
     border-radius: 16px;
@@ -78,7 +78,7 @@ main {
 
 .basicdata-container .location {
     color: black;
-    font-size: 36px;
+    font-size: 7vw;
     font-weight: 700px;
     text-align: center;
 }
@@ -192,17 +192,9 @@ main {
     line-height: 1.4em;
 }
 
-
-/* footer */
-footer {
-    border-top: 2px solid black;
-    border-radius: 16px 16px 0px 0px;
-    /* background-color: rgba(192, 192, 192, 0.432); */
-    height: 3vh;
-    display: flex;
-    justify-content: center;
-}
-
-footer img {
-    height: 1.5rem
+#bpLogo {
+    position: fixed;
+    bottom: 0;
+    height: 1.5rem;
+    margin-left: 45%;    
 }
