--- a/src/Redo.css
+++ b/src/Redo.css
@@ -20,8 +20,53 @@ body {
 main {
     height: 100vh;
     width: 100vw;
-    background-color: rgb(105, 156, 245);
+    position: relative;
+    z-index: 2;
 }
+
+.background-container {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+
+    background-image:
+        linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(169, 169, 170, 0.73)),
+        url('./assets/background-2.jpg');
+    background-position: center;
+    background-size: cover;
+    filter: blur(5px);
+}
+
+/* SplashScreen */
+.splashscreen-container {
+    height: 30vh;
+    width: 100vw;
+
+    border: 1px solid rgba(255, 0, 0, 0);
+}
+
+.splashscreen-container h1 {
+    margin-top: 20vh;
+    text-align: center;
+
+    /* border: 1px solid pink; */
+}
+
+.splashscreen-container .icons-container {
+    height: 20vh;
+    width: 100%;
+    margin-top: 5vh;
+    overflow: hidden;
+
+    display: flex;
+    justify-content: center;
+}
+
+.icons-container img {
+    height: 10vh;
+}
+
 
 /* CitySearch Component */
 .search-box {
