--- a/src/Redo.css
+++ b/src/Redo.css
@@ -179,7 +179,7 @@ main {
 
 .max, .min {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     font-weight: 300;
     color: rgba(70, 70, 70, 0.815);
 }
