--- a/src/Redo.css
+++ b/src/Redo.css
@@ -56,7 +56,7 @@ main {
 .splashscreen-container .icons-container {
     height: 20vh;
     width: 100%;
-    margin-top: 5vh;
+    margin-top: 8vh;
     overflow: hidden;
 
     display: flex;
@@ -231,11 +231,17 @@ main {
 
     text-align: center;
     line-height: 1.4em;
+    font-size: 0.8em;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
 
 #bpLogo {
     position: fixed;
     bottom: 0;
     height: 1.5rem;
-    margin-left: 45%;    
+        
 }
